--- a/model/PPMI_experiment_Amine copy.ipynb
+++ b/model/PPMI_experiment_Amine copy.ipynb
@@ -78,28 +78,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\nss_1\\clustering-interval-censored\\venv\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3258: DtypeWarning: Columns (4,11,12,58,112,193,202,204) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "  interactivity=interactivity, compiler=compiler, result=result)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'\\n# Step 3: Keep only \\'PD\\' and \\'Prodromal\\'hid\\ndf = df[df[\"COHORT\"].isin([\"PD\", \"Healthy Control\"])]\\n\\n# Step 4: Drop any PATNO who has missing values in any of those columns\\n#def is_patient_valid(group):\\n    #return (len(group) == 3) and (not group[cog_cols].isnull().any().any())\\n\\n#df = df.groupby(\"PATNO\").filter(is_patient_valid)\\n\\n# Step 5: Add subtype column\\ndf[\\'subtype\\'] = df[\\'COHORT\\'].apply(lambda x: 0 if x == \\'PD\\' else 1 if x == \\'Healthy Control\\' else np.nan)\\n\\n# Step 6: Sort and add obs_time\\ndf = df.sort_values([\\'PATNO\\', \\'AGE_AT_VISIT\\']).reset_index(drop=True)\\ndf[\\'obs_time\\'] = df.groupby(\\'PATNO\\').cumcount() + 1\\n\\n\\n# Step 7: Normalize\\nfor col in cog_cols:\\n    max_val = df[col].max()\\n    if pd.notnull(max_val) and max_val != 0:\\n        df[col] = df[col] / max_val\\n\\n# Final formatting\\nfiltered_df = df[[\\n    \"MCATOT\", \"NP1RTOT\", \"NP2PTOT\", \"NP3TOT\", \"SDMTOTAL\",\\n    \"subtype\",\\n    \"AGE_AT_VISIT\",\\n    \"PATNO\",\\n    \"obs_time\"\\n]]\\nprint(filtered_df[\"subtype\"].value_counts())\\n'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def make_test_prime(test_data_dict_raw, drop_first_T=1.):\n",
     "    # drop first year\n",
@@ -135,9 +116,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    588\n",
+      "1      9\n",
+      "Name: subtype, dtype: int64\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -145,63 +135,275 @@
       "c:\\Users\\nss_1\\clustering-interval-censored\\venv\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3258: DtypeWarning: Columns (4,11,12,58,112,193,202,204) have mixed types.Specify dtype option on import or set low_memory=False.\n",
       "  interactivity=interactivity, compiler=compiler, result=result)\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0    1416\n",
-      "1     501\n",
-      "Name: subtype, dtype: int64\n"
-     ]
     }
    ],
    "source": [
     "import pandas as pd \n",
     "\n",
     "# Step 1: Load data\n",
-    "data = pd.read_csv('C:/Users/nss_1/clustering-interval-censored/model/data/result_4_long_format.csv', sep=';')\n",
+    "df = pd.read_csv('C:/Users/nss_1/clustering-interval-censored/model/data/result_4_long_format.csv', sep=';')\n",
     "\n",
     "# Step 2: Filter to only V04, V06, V08\n",
     "required_visits = [\"V04\", \"V06\", \"V08\"]\n",
     "cog_cols = [\"MCATOT\", \"NP1RTOT\", \"NP2PTOT\", \"NP3TOT\", \"SDMTOTAL\"]\n",
-    "selected_columns = [\"PATNO\", \"AGE_AT_VISIT\", \"FINAL_SEX_ENCODED\", \"COHORT\"] + cog_cols + [\"EVENT_ID\"]\n",
+    "selected_columns = [\"PATNO\", \"AGE_AT_VISIT\", \"FINAL_SEX_ENCODED\", \"COHORT\", \"subtype\", \"obs_time\"] + cog_cols + [\"EVENT_ID\"]\n",
+    "import numpy as np\n",
     "\n",
-    "df = data[data[\"EVENT_ID\"].isin(required_visits)][selected_columns]\n",
-    "\n",
-    "# Step 3: Keep only 'PD' and 'Prodromal'\n",
+    "# Suppose cog_cols = ['A','B',…]\n",
+    "df[cog_cols] = df[cog_cols].replace(0, np.nan)\n",
+    "df = df.dropna(subset=cog_cols)\n",
     "df = df[df[\"COHORT\"].isin([\"PD\", \"Healthy Control\"])]\n",
+    "df['subtype'] = df['COHORT'].apply(lambda x: 0 if x == 'PD' else 1 if x == 'Healthy Control' else np.nan)\n",
+    "visit_encoding = {visit: i+1 for i, visit in enumerate(required_visits)}\n",
+    "\n",
+    "# Assign obs_time using the mapping\n",
+    "df['obs_time'] = df['EVENT_ID'].map(visit_encoding)\n",
+    "df = df.sort_values(['PATNO', 'AGE_AT_VISIT']).reset_index(drop=True)\n",
+    "event_counts = df.groupby(\"PATNO\")[\"EVENT_ID\"].apply(set)\n",
+    "\n",
+    "# Keep only IDs where all required visits are present\n",
+    "valid_ids = event_counts[event_counts.apply(lambda x: set(required_visits).issubset(x))].index\n",
+    "\n",
+    "# Filter the DataFrame to keep only those IDs and the selected columns\n",
+    "df_filtered = df[df[\"PATNO\"].isin(valid_ids) & df[\"EVENT_ID\"].isin(required_visits)][selected_columns]\n",
+    "\n",
     "\n",
     "# Step 4: Drop any PATNO who has missing values in any of those columns\n",
-    "def is_patient_valid(group):\n",
-    "    return (len(group) == 3) and (not group[cog_cols].isnull().any().any())\n",
+    "#def is_patient_valid(group):\n",
+    "    #return (len(group) == 3) and (not group[cog_cols].isnull().any().any())\n",
     "\n",
-    "df = df.groupby(\"PATNO\").filter(is_patient_valid)\n",
+    "#df = df.groupby(\"PATNO\").filter(is_patient_valid)\n",
     "\n",
-    "# Step 5: Add subtype column\n",
-    "df['subtype'] = df['COHORT'].apply(lambda x: 0 if x == 'PD' else 1 if x == 'Healthy Control' else np.nan)\n",
-    "\n",
-    "# Step 6: Sort and add obs_time\n",
-    "df = df.sort_values(['PATNO', 'AGE_AT_VISIT']).reset_index(drop=True)\n",
-    "df['obs_time'] = df.groupby('PATNO').cumcount() + 1\n",
     "\n",
     "# Step 7: Normalize\n",
     "for col in cog_cols:\n",
-    "    max_val = df[col].max()\n",
+    "    max_val = df_filtered[col].max()\n",
     "    if pd.notnull(max_val) and max_val != 0:\n",
-    "        df[col] = df[col] / max_val\n",
+    "        df_filtered[col] = df_filtered[col] / max_val\n",
     "\n",
     "# Final formatting\n",
-    "filtered_df = df[[\n",
+    "filtered_df = df_filtered[[\n",
     "    \"MCATOT\", \"NP1RTOT\", \"NP2PTOT\", \"NP3TOT\", \"SDMTOTAL\",\n",
     "    \"subtype\",\n",
     "    \"AGE_AT_VISIT\",\n",
     "    \"PATNO\",\n",
     "    \"obs_time\"\n",
     "]]\n",
-    "print(filtered_df[\"subtype\"].value_counts())\n",
-    "# Save or pass to model\n",
-    "data = filtered_df"
+    "print(filtered_df[\"subtype\"].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MCATOT</th>\n",
+       "      <th>NP1RTOT</th>\n",
+       "      <th>NP2PTOT</th>\n",
+       "      <th>NP3TOT</th>\n",
+       "      <th>SDMTOTAL</th>\n",
+       "      <th>subtype</th>\n",
+       "      <th>AGE_AT_VISIT</th>\n",
+       "      <th>PATNO</th>\n",
+       "      <th>obs_time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.933333</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.034483</td>\n",
+       "      <td>0.196721</td>\n",
+       "      <td>0.573333</td>\n",
+       "      <td>1</td>\n",
+       "      <td>82.9</td>\n",
+       "      <td>3008</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.900000</td>\n",
+       "      <td>0.083333</td>\n",
+       "      <td>0.068966</td>\n",
+       "      <td>0.213115</td>\n",
+       "      <td>0.466667</td>\n",
+       "      <td>1</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>3008</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0.800000</td>\n",
+       "      <td>0.083333</td>\n",
+       "      <td>0.068966</td>\n",
+       "      <td>0.163934</td>\n",
+       "      <td>0.440000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>85.1</td>\n",
+       "      <td>3008</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0.866667</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.517241</td>\n",
+       "      <td>0.508197</td>\n",
+       "      <td>0.706667</td>\n",
+       "      <td>0</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>3010</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>0.933333</td>\n",
+       "      <td>0.166667</td>\n",
+       "      <td>0.689655</td>\n",
+       "      <td>0.540984</td>\n",
+       "      <td>0.813333</td>\n",
+       "      <td>0</td>\n",
+       "      <td>49.1</td>\n",
+       "      <td>3010</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1286</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.083333</td>\n",
+       "      <td>0.103448</td>\n",
+       "      <td>0.278689</td>\n",
+       "      <td>0.746667</td>\n",
+       "      <td>0</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>114615</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1287</th>\n",
+       "      <td>0.933333</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.137931</td>\n",
+       "      <td>0.147541</td>\n",
+       "      <td>0.626667</td>\n",
+       "      <td>0</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>114615</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1298</th>\n",
+       "      <td>0.900000</td>\n",
+       "      <td>0.083333</td>\n",
+       "      <td>0.448276</td>\n",
+       "      <td>0.737705</td>\n",
+       "      <td>0.600000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>68.2</td>\n",
+       "      <td>116531</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1299</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.583333</td>\n",
+       "      <td>0.551724</td>\n",
+       "      <td>0.311475</td>\n",
+       "      <td>0.626667</td>\n",
+       "      <td>0</td>\n",
+       "      <td>69.2</td>\n",
+       "      <td>116531</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1300</th>\n",
+       "      <td>0.933333</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.655172</td>\n",
+       "      <td>0.590164</td>\n",
+       "      <td>0.693333</td>\n",
+       "      <td>0</td>\n",
+       "      <td>70.2</td>\n",
+       "      <td>116531</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>597 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        MCATOT   NP1RTOT   NP2PTOT    NP3TOT  SDMTOTAL  subtype  AGE_AT_VISIT  \\\n",
+       "6     0.933333  0.333333  0.034483  0.196721  0.573333        1          82.9   \n",
+       "7     0.900000  0.083333  0.068966  0.213115  0.466667        1          84.0   \n",
+       "8     0.800000  0.083333  0.068966  0.163934  0.440000        1          85.1   \n",
+       "9     0.866667  0.333333  0.517241  0.508197  0.706667        0          48.0   \n",
+       "10    0.933333  0.166667  0.689655  0.540984  0.813333        0          49.1   \n",
+       "...        ...       ...       ...       ...       ...      ...           ...   \n",
+       "1286  1.000000  0.083333  0.103448  0.278689  0.746667        0          67.0   \n",
+       "1287  0.933333  0.333333  0.137931  0.147541  0.626667        0          68.0   \n",
+       "1298  0.900000  0.083333  0.448276  0.737705  0.600000        0          68.2   \n",
+       "1299  1.000000  0.583333  0.551724  0.311475  0.626667        0          69.2   \n",
+       "1300  0.933333  0.500000  0.655172  0.590164  0.693333        0          70.2   \n",
+       "\n",
+       "       PATNO  obs_time  \n",
+       "6       3008       1.0  \n",
+       "7       3008       2.0  \n",
+       "8       3008       3.0  \n",
+       "9       3010       1.0  \n",
+       "10      3010       2.0  \n",
+       "...      ...       ...  \n",
+       "1286  114615       2.0  \n",
+       "1287  114615       3.0  \n",
+       "1298  116531       1.0  \n",
+       "1299  116531       2.0  \n",
+       "1300  116531       3.0  \n",
+       "\n",
+       "[597 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filtered_df"
    ]
   },
   {
